--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-site",
-  "private": true,
+  "private": false,
+  "homepage": "https://rommka83.github.io/my-site/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +9,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "shared": "generate-react component"
+    "shared": "generate-react component",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
@@ -37,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "generate-react-cli": "^8.3.0",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
